--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -2,9 +2,13 @@
   border-radius: 2px;
   border-color: $ballblue;
   background-color: $ballblue;
-  width: 21rem;
+  width: 20em;
   height: 40px;
-  margin:9px 17px;
+  margin:auto;
+  top: 0;
+  left:0;
+  right: 0;
+  button: 0;
   color: $white;
   font-size: $medium;
   font-weight: $bold;
